<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seleccion"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="22dp"

            />


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/operacion"
            android:checkedButton="@+id/rCuadrado"

            >
            <RadioButton
                android:id="@+id/rCuadrado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuadrado"

                />
            <RadioButton
                android:id="@+id/rTriangulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/triangulo"

                android:checked="false" />
            <RadioButton
                android:id="@+id/rRectangulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rectangulo"
                />
            <RadioButton
                android:id="@+id/rCirculo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/circulo"
                />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"

            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lado"
            android:textColor="@color/black"
            android:id="@+id/tEdit1"
            android:paddingTop="24dp"
            />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lado2"
                android:paddingTop="24dp"
                android:id="@+id/tEdit2"
                android:textColor="@color/black"
                />

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultado"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:paddingTop="24dp"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="3.5"
            android:orientation="vertical"
            android:layout_height="match_parent">



            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/eDimension1"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/eDimension2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="26dp"
                android:id="@+id/tResultado"/>




            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bCalcular"
                android:textSize="30dp"
                android:id="@+id/bCalcular"
                android:layout_gravity="right"
                android:onClick="operar"


                />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
